--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -18,6 +18,7 @@ jobs:
     env:
       VCPKG_INSTALLATION_ROOT: 'C:\vcpkg'
 
+    runs-on: ${{matrix.cfg.runner}}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -110,7 +111,7 @@ jobs:
         run: |
           #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo
           #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ env.VCPKG_INSTALLATION_ROOT }}\packages\opencv4_x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
-          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo  -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ env.VCPKG_INSTALLATION_ROOT }}\installed\x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
+          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo  -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
       - name: CMake
         if: ${{matrix.cfg.runner == 'localhost-win10' }}
         run: |
@@ -120,23 +121,19 @@ jobs:
         run: |
           cmake --build build --config RelWithDebInfo --parallel
           cd build
-          ls
           ls bin
-          ls lib
           
       - name: Deploy
         if: ${{matrix.cfg.runner != 'localhost-win10' }}
         run: |
           ${{ github.workspace }}/Qt/5.15.2/msvc2019_64/bin/windeployqt.exe --qmldir src/windows/qml --compiler-runtime build/bin/Swiftray.exe
           cd build
-          ls
           ls bin
       - name: Deploy
         if: ${{matrix.cfg.runner == 'localhost-win10' }}
         run: |
           C:/Dev/Qt/5.15.2/msvc2019_64/bin/windeployqt.exe --qmldir src/windows/qml --compiler-runtime build/bin/Swiftray.exe
           cd build
-          ls
           ls bin
       #- name: Deploy
       #  shell: msys2 {0}
