Use command prompt

--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -64,13 +64,14 @@ jobs:
           python3 -m aqt install-qt windows desktop 5.15.2 win64_msvc2019_64 -m debug_info -O ${{ github.workspace }}/Qt
 
       - name: Create build dir
+        shell: cmd
         run: |
           mkdir build
           cd ${{ env.VCPKG_INSTALLATION_ROOT }}
-          ls 
+          dir 
           cd installed
-          ls include
-          ls bin
+          dir include
+          dir bin
 
       - name: Setup msys2
         if: ${{matrix.cfg.runner != 'localhost-win10' }}
@@ -101,10 +102,11 @@ jobs:
           conan create . user/testing
 
       - name: Conan install
+        shell: cmd
         run: |
           cd build
           conan install .. --build=missing
-          ls
+          dir
           
       - name: CMake
         if: ${{matrix.cfg.runner != 'localhost-win10' }}
@@ -114,14 +116,16 @@ jobs:
           cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo  -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
       - name: CMake
         if: ${{matrix.cfg.runner == 'localhost-win10' }}
+        shell: cmd
         run: |
           cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo  -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DCMAKE_PREFIX_PATH=C:/Dev/Qt/5.15.2/msvc2019_64/lib/cmake
 
       - name: Build
+        shell: cmd
         run: |
           cmake --build build --config RelWithDebInfo --parallel
           cd build
-          ls bin
+          dir bin
           
       - name: Deploy
         if: ${{matrix.cfg.runner != 'localhost-win10' }}
@@ -131,9 +135,11 @@ jobs:
           ls bin
       - name: Deploy
         if: ${{matrix.cfg.runner == 'localhost-win10' }}
+        shell: cmd
         run: |
           C:/Dev/Qt/5.15.2/msvc2019_64/bin/windeployqt.exe --qmldir src/windows/qml --compiler-runtime build/bin/Swiftray.exe
           cd build
+          ls
           ls bin
       #- name: Deploy
       #  shell: msys2 {0}
