--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         cfg:
-          #- { runner: windows-latest, build: 'cmake', dist: false }
+          - { runner: windows-latest, build: 'cmake', dist: false }
           - { runner: localhost-win10, build: 'cmake', dist: true}
 
     name: ${{matrix.cfg.runner}} ${{matrix.cfg.build}}
@@ -166,13 +166,17 @@ jobs:
           cd bin
           sentry-cli upload-dif -o flux3dp -p swiftray Swiftray.pdb
 
-      #- name: Deploy
-      #  shell: msys2 {0}
+      #- name: Sign the executable
       #  run: |
-      #    export PATH="/mingw64/bin:$PATH"
-      #    windeployqt --qmldir src/windows/qml --compiler-runtime build/release/Swiftray.exe
-      #- name: Copy necessary shared libraries
-      #  shell: msys2 {0}
+      #
+
+      #- name: Create installer
       #  run: |
-      #- name: Create .msi installer
+      #
+
+      #- name: Sign the installer
       #  run: |
+      #
+
+      #- name: Upload artifact
+      #
