--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,12 +114,14 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     ${APP_RESOURCE_FILES})
   set_target_properties(${PROJECT_NAME} PROPERTIES
     MACOSX_BUNDLE TRUE # Create macOS app bundle
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/cmake/MacOSXBundleInfo.plist.in
     MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
     MACOSX_BUNDLE_EXECUTABLE_NAME ${PROJECT_NAME}
     MACOSX_BUNDLE_ICON_FILE icon.icns
     MACOSX_BUNDLE_GUI_IDENTIFIER com.flux.Swiftray
-    MACOSX_BUNDLE_LONG_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_MINOR}${VERSION_SUFFIX}
+    MACOSX_BUNDLE_LONG_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_BUILD}${VERSION_SUFFIX}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}
+    MACOSX_BUNDLE_BUNDLE_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_BUILD}
     MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2022, FLUX Inc."
   )
 else()
@@ -142,6 +144,7 @@ target_sources(Swiftray PRIVATE
   ${SRC_DIR}/command.cpp
   ${SRC_DIR}/clipboard.cpp
   "qml.qrc" # replaced qt5_add_resources() when CMAKE_AUTORCC is ON
+  "sparkle.qrc" # 
 )
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_link_libraries(Swiftray "-framework AppKit")
