--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,18 +57,22 @@ if (MINGW)
 endif()
 
 # Compiler specific
-if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
+#if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
+  #message("CMAKE_SYSTEM_VERSION: "  ${CMAKE_SYSTEM_VERSION})
+  #message("WINDOWS SDK VERSION: " ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION})
+  #message("SYSTEM VERSION" ${CMAKE_HOST_SYSTEM_VERSION})
+  #message("CMAKE_SYSTEM_NAME" ${CMAKE_SYSTEM_NAME})
   # MSVC 14.28 + C11 enables C5105, but older Windows SDKs aren't completely compatible.
 	# Windows SDK 10.0.17763.0 generates syntax errors with C11 enabled.
-	if (CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION VERSION_LESS 10.0.18362.0)
-		message(FATAL_ERROR "Windows SDK ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION} doesn't support C17. Please make sure you're using 10.0.20348.0 or later.")
-	endif()
+#	if (CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION VERSION_LESS 10.0.18362.0)
+#		message(FATAL_ERROR "Windows SDK ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION} doesn't support C17. Please make sure you're using 10.0.20348.0 or later.")
+#	endif()
 	# Windows SDK 10.0.18362.0 to 10.0.19041.685 generate warning C5105 with C11 enabled.
-	if(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION VERSION_LESS 10.0.20348.0)
-		message(WARNING "Windows SDK ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION} doesn't support C17. Please make sure you're using 10.0.20348.0 or later.")
-	endif()
-else() # ! MSVC
-endif()
+#	if(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION VERSION_LESS 10.0.20348.0)
+#		message(WARNING "Windows SDK ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION} doesn't support C17. Please make sure you're using 10.0.20348.0 or later.")
+#	endif()
+#else() # ! MSVC
+#endif()
 
 add_definitions(-DQT_NO_KEYWORDS)
 
